src/app/components/project-card/project-card.component.scss
@use './abstracts' as *;

.project-card {
  display: block;
  margin: 0 auto;
  width: 90%;
  border-radius: var(--br);
  border: 1px solid var(--accent-hl-clr);
  transition: all 0.3s ease;
  background: var(--secondary-clr);
  color: var(--color-text);
  padding: 0;

  &:hover {
    @include hover-effect;
  }

  h3 {
    background: linear-gradient(180deg, transparent 25%, rgba(5, 91, 141, 0.904) 100%);
    padding: 0;

    font-size: var(--fs-3);
    color: #fff;
    margin: 0;
    font-weight: var(--fw-b);
    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
    padding: 0.5rem 1rem;
    border-radius: var(--br-sm);
    pointer-events: auto;
  }

  .images {
    display: flex;
    gap: var(--spacer);
  }

  img {
    overflow: hidden;
    position: relative;
    width: 100%;
    max-width: 100%;
    max-height: 400px;
    height: auto;
    object-fit: cover;
    border-radius: 0;
    box-shadow: none;
    margin-bottom: var(--spacer);
  }

  // ...existing code...
  // Add the new project-banner class
  .project-banner {
    width: 100%;
    max-height: 220px;
    height: auto;
    object-fit: cover;
    border-radius: 0;
    box-shadow: none;
    margin-bottom: var(--spacer);
  }

  // ...existing code...

  .content {
    padding: var(--spacer);

    .technologies {
      margin-bottom: var(--spacer-md);

      span {
        background: var(--accent-clr);
        color: var(--color-secondary-text);
        margin-right: var(--spacer);
        padding: var(--spacer-sm);
        border-radius: var(--br);
        font-size: var(--fs-5);
        font-weight: 500;
      }
    }

    .actions {
      a {
        text-align: center;
        padding: var(--spacer-sm);
        border-radius: var(--br);
        text-decoration: none;
        font-weight: 500;
        transition: all 0.3s ease;
        margin-right: var(--spacer);

        &.demo {
          background: var(--accent-clr);
          color: var(--secondary-clr);

          &:hover,
          &.github {
            background: var(--accent-hl-clr);
          }
        }

        &.github {
          background: var(--accent-clr);
          color: var(--secondary-clr);

          &:hover {
            background: var(--accent-hl-clr);
          }
        }
      }
    }
  }

  @media (min-width: 0px) and (max-width: 649px) {

    margin: 0 auto;
   .images {
      flex-direction: column;
    }
  }
}

